- Fix auto-assigned IDs overlapping when adding vehicles.
- Fix encoding of label lists in Action0 properties.
- Fix encoding and decoding of Action 5.
- Fix `min_life` Action0 property size for houses (spec error).
- Fix `Switch` code using wrong feature for related scope.
- Fix `Switch` code grammar issues.
- Fix alpha generation when using colourkey.
- Add sprite cache.
- Optimize memory usage when writing NewGRF.
- Optimize grf file size by removing duplicate sprites (by data).
- Allow defining named temporary variables in `Switch` code.
- Rename zoom constants to use natural/nml order: `ZOOM_4X` -> `ZOOM_2X` -> `ZOOM_NORMAL` -> `ZOOM_OUT_2X` -> `ZOOM_OUT_4X` -> `ZOOM_OUT_8X`.
- Rename `PALETTE` to `PIL_PALETTE`, add `PALETTE` as a list of (r, g, b) tuples.
- Add `OKLAB_PALETTE`, `NP_PALETTE`, `PALETTE_IDX` constants.
- Add `srgb_to_linear`, `linear_to_srgb`, `srgb_to_oklab`, `oklab_to_srgb` colour conversion functions.
- Add `mode` argument to `Mask` with option to overdraw sprite.
- Add `ShipFlags` enum.
- Add support for the extended format in Action1.
- Add `main` function to handle command line arguments.
- Add some VarAction2 variables for houses.
- Add `TTDString` and `TTDIndustry` constants.
- Add `TownGrowthEffect` constants.
- Add `Eval` as a version of `Switch` without ranges.
- Add `subroutines` argument to `Switch` and allow `name()` call syntax.
- Add `debug_zoom_levels` argument to `BaseNewGRF.write` to recolour sprites according to their zoom level: 4x - red, 2x - blue, 1x - green, out-2x - cyan, out-4x - yellow, out-8x - magenta.
- Add `--debug-zoom-levels` command line argument to `build` command of `main` function.
- Add `WithMask` sprite class to add mask layer to images.
- Support using StringRef in Action 0x14 (`SetProperties`).
- Support using StringRef as `NewGRF` `name` and `description`.
- Support encoding of bridge layouts.
- Support encoding of industry layouts.